style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";

/**************/
/* BASE RULES */
/**************/

html {
  height: 100%;
}

body {
  background: $white;
  font: 1.1em/1.4 $helvetica;
  color: $darkGray;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.container {
  margin: 0 auto;
  max-width: 1100px;
  width: 100%;
  --container-padding: 40px;
  padding: 0 var(--container-padding);

  @include tablet {
    --container-padding: 24px;
  }

  @include mobile {
    --container-padding: 16px;
  }
}

main {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  padding-top: 8px;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $helveticaNeue;
  color: $darkerGray;
  font-weight: bold;

  line-height: 1.7;
  padding: 0;

  @include mobile {
    line-height: 1.4;
  }
}

h1 {
  font-size: xx-large;

  @include mobile {
    font-size: x-large;
  }

  a {
    color: inherit;
  }
}

h2 {
  font-size: x-large;
}

h3, h4 {
  font-size: large;
}

h4 {
  color: $gray;
}

p {
  margin: 15px 0;
}

a {
  color: $blue;
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

ul, ol {
  margin: 15px 0;
  padding-left: 30px;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

.date {
  font-style: italic;
  color: $gray;
}

::selection {
  color: $black;
  background: $lightGray;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

.masthead {
  display: flex;
  align-items: center;
  padding: 20px var(--container-padding);
  border-bottom: 1px solid $lightGray;

  @include tablet {
    flex-wrap: wrap;
  }

  @include mobile {
    flex-direction: column;
    text-align: center;
  }
}

.site-avatar {
  width: 70px;
  height: 70px;
  margin-right: 15px;

  @include mobile {
    margin-right: 0;
  }

  img {
    border-radius: 5px;
  }
}

.site-name {
  margin: 0;
  color: $darkGray;
  font-family: $helveticaNeue;
  font-weight: 300;
  font-size: 1.5rem;
  letter-spacing: 1px;

  a:hover {
    text-decoration: none;
  }
}

.site-description {
  margin: -5px 0 0 0;
  color: $gray;
  font-size: smaller;

  @include mobile {
    margin: 3px 0;
  }
}

nav {
  margin-left: auto;
  font-family: $helveticaNeue;
  font-size: large;

  @include mobile {
    margin: 9px auto 0;
  }

  a {
    margin-left: 20px;
    color: $darkGray;
    font-weight: 300;
    letter-spacing: 1px;
    transition: color 0.2s ease;

    &:hover {
      color: $blue;
      text-decoration: none;
    }

    @include mobile {
      margin: 0 10px;
      color: $blue;
      @include touch-target;
      justify-content: center;
    }
  }
}

//
// .main
//

.posts > .post {
  padding: 2em 0;
  border-bottom: 1px solid $lightGray;

  &:first-child {
    padding-top: 0;
  }

  &:last-child {
    padding-bottom: 1em;
    border-bottom: none;
  }
}

.post {
  margin: 0 auto;

  blockquote {
    margin: 1.8em .8em;
    border-left: 2px solid $gray;
    padding: 0.1em 1em;
    color: $gray;
    font-style: italic;
  }

  hr {
    border: thin dashed $gray;
  }

  .read-more {
    text-transform: uppercase;
    font-weight: bold;
    font-size: smaller;
    letter-spacing: 0.5px;
    transition: color 0.2s ease;
    display: inline-block;
    padding: 12px 0;
  }

  .issues {
    margin: 35px 0 0 0;
    font-size: smaller;
    color: $gray;
    text-align: center;
  }

  pre, table, img {
    padding: 7px 7px 7px 10px;
    border: 1px solid $borderGray;
    box-shadow: 3px 3px rgba(0,0,0,0.1);
    margin: 15px auto;
  }

  pre, table {
    overflow: auto;
    font-size: smaller;
    max-width: 100%;
  }

  th, td, dt {
    padding: 5px;
    border: 1px solid $borderGray;
  }

  td {
    text-align: justify;
  }

  dt, th {
    font-weight: bold;
  }

  th {
    background-color: $lightGray;
    text-align: center;
  }

  .message {
    border: medium darkred solid;
    padding: 0 15px;
    max-width: 80ch;
    margin: 35px auto;
    font-size: smaller;
    background-color: $lightGray;
    text-align: center;

    p {
      text-align: justify;
    }

    h2 {
      font-size: medium;
    }
  }
}

.navigation {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  font-size: medium;
  font-weight: bold;
  margin-top: auto;
  padding: 24px 0;
  width: 100%;

  > * { flex: 1; }

  .prev, .next {
    max-width: 48%;
    overflow: hidden;
  }

  a {
    @include touch-target;
  }

  .current {
    text-align: center;
    color: $gray;
    font-weight: normal;
  }

  .next { text-align: right; }

  @include mobile {
    font-size: small;
    padding: 16px 0;
  }
}

footer {
  padding: 24px 40px;
  border-top: 1px solid $borderGray;
  background-color: $lightGray;
  text-align: center;

  @include tablet {
    padding: 20px 24px;
  }

  @include mobile {
    padding: 16px;
  }

  a {
    @include touch-target;
    justify-content: center;

    &:hover {
      text-decoration: none;
    }
  }

  p {
    font-size: x-small;
    color: $darkGray;
    margin: 0;
  }
}

@import "highlights";
@import "svg-icons";

